actualize application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,35 @@
+###########################
+#### Server properties ####
+###########################
+server.port=8040
+server.servlet.context-path=/profiley
+spring.servlet.multipart.max-file-size=5MB
+spring.application.name=profiley
 
+##########################
+### Session properties ###
+##########################
+spring.session.cookie-name=SESSION
+spring.session.jdbc.table-name=SPRING_SESSION
+spring.session.store-type=jdbc
+spring.session.jdbc.flush-mode=on_save
 
-dictionaries.profiler.pool.size.core=1
-dictionaries.profiler.pool.size.maximum=1
-dictionaries.profiler.keep.alive.time.milliseconds=10000
+###########################
+### Database properties ###
+###########################
+spring.jpa.open-in-view=false
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
 
-rules.profiler.pool.size.core=1
-rules.profiler.pool.size.maximum=1
-rules.profiler.keep.alive.time.milliseconds=10000
+############################
+### Liquibase Properties ###
+############################
+spring.liquibase.enabled=false
+spring.liquibase.url=
+spring.liquibase.user=
+spring.liquibase.password=
+spring.liquibase.change-log=classpath:db/changelog-master.xml
