actualize application.properties and mask system rules if need

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,9 @@ spring.liquibase.url=
 spring.liquibase.user=
 spring.liquibase.password=
 spring.liquibase.change-log=classpath:db/changelog-master.xml
+
+############################
+### Custom Properties ###
+############################
+system.rules.masking.enabled=true
+system.rules.masking.symbol=*
