exclude fields with null values in response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,11 @@ spring.liquibase.user=
 spring.liquibase.password=
 spring.liquibase.change-log=classpath:db/changelog-master.xml
 
+###########################
+#### Jackson properties ####
+###########################
+spring.jackson.default-property-inclusion=non_null
+
 ############################
 ### Custom Properties ###
 ############################
