implement caching for system rules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,8 @@ spring.jackson.default-property-inclusion=non_null
 ############################
 system.rules.masking.enabled=true
 system.rules.masking.symbol=*
+
+############################
+#### Cache Properties #####
+############################
+system.rules.local.cache.enabled=false
