implement loading data in testcontainers and clear schema after execution

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,6 +11,9 @@ spring.servlet.multipart.max-file-size=5MB
 ### Database properties ###
 ###########################
 spring.jpa.open-in-view=false
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/db-test-init.sql
+spring.sql.init.data-locations=classpath:db/db-test-data.sql
 
 ############################
 ### Liquibase Properties ###
