add new tests, add new exceptions in exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,6 +44,8 @@ spring.jackson.default-property-inclusion=non_null
 ############################
 system.rules.masking.enabled=true
 system.rules.masking.symbol=*
+security.min.password.length=8
+security.max.password.length=20
 
 ############################
 #### Cache Properties #####
