implement profile by using dictionaries

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -32,6 +32,7 @@ system.rules.masking.enabled=true
 system.rules.masking.symbol=*
 security.min.password.length=8
 security.max.password.length=20
+max.words.count.per.request=5000
 
 ############################
 #### Cache Properties #####
