repair tests launch

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -33,6 +33,7 @@ system.rules.masking.symbol=*
 security.min.password.length=8
 security.max.password.length=20
 max.words.count.per.request=5000
+create.dictionary.by.file.extension.supports=txt
 
 ############################
 #### Cache Properties #####
