--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,9 +46,14 @@ system.rules.masking.enabled=true
 system.rules.masking.symbol=*
 security.min.password.length=8
 security.max.password.length=20
-max.words.count.per.request=5000
 
 ############################
 #### Cache Properties #####
 ############################
 system.rules.local.cache.enabled=false
+
+############################
+#### Limits Properties #####
+############################
+max.words.count.per.request=10000
+max.dictionaries.count.per.user=50
