--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -32,10 +32,15 @@ system.rules.masking.enabled=true
 system.rules.masking.symbol=*
 security.min.password.length=8
 security.max.password.length=20
-max.words.count.per.request=5000
 create.dictionary.by.file.extension.supports=txt
 
 ############################
 #### Cache Properties #####
 ############################
 system.rules.local.cache.enabled=false
+
+############################
+#### Limits Properties #####
+############################
+max.words.count.per.request=10000
+max.dictionaries.count.per.user=50
