change dictionary to user output

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,7 @@ system.rules.masking.enabled=true
 system.rules.masking.symbol=*
 security.min.password.length=8
 security.max.password.length=20
+dictionary.words.visible.output.count=2
 
 ############################
 #### Cache Properties #####
