--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -33,6 +33,7 @@ system.rules.masking.symbol=*
 security.min.password.length=8
 security.max.password.length=20
 create.dictionary.by.file.extension.supports=txt
+dictionary.words.visible.output.count=2
 
 ############################
 #### Cache Properties #####
