--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -45,3 +45,9 @@ system.rules.local.cache.enabled=false
 ############################
 max.words.count.per.request=10000
 max.dictionaries.count.per.user=50
+
+############################
+#### Process properties ####
+############################
+process.pid.generation.max.attempts=1000
+process.pid.generation.length=9
