add localization for report generation

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -51,3 +51,8 @@ max.dictionaries.count.per.user=50
 ############################
 process.pid.generation.max.attempts=1000
 process.pid.generation.length=9
+
+############################
+#### Report properties #####
+############################
+report.default.mime.type=application/vnd.ms-excel
