--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,15 @@ max.dictionaries.count.per.user=50
 ############################
 process.pid.generation.max.attempts=1000
 process.pid.generation.length=9
+
+############################
+#### Report properties #####
+############################
+report.default.mime.type=application/vnd.ms-excel
+
+######################################
+### i18n / Localization Properties ###
+######################################
+default.language=en
+default.encoding=utf8
+localization.basename.messages.path=classpath:i18n/messages
