fix tests launch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,6 +69,7 @@ process.pid.generation.length=9
 #### Report properties #####
 ############################
 report.default.mime.type=application/vnd.ms-excel
+report.default.extension=xlsx
 
 ######################################
 ### i18n / Localization Properties ###
