--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -56,3 +56,11 @@ process.pid.generation.length=9
 #### Report properties #####
 ############################
 report.default.mime.type=application/vnd.ms-excel
+report.default.extension=xlsx
+
+######################################
+### i18n / Localization Properties ###
+######################################
+default.language=en
+default.encoding=utf8
+localization.basename.messages.path=classpath:i18n/messages
