add benchmark measurement for profiling process

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -64,3 +64,8 @@ report.default.extension=xlsx
 default.language=en
 default.encoding=utf8
 localization.basename.messages.path=classpath:i18n/messages
+
+######################################
+###### App benchmark Properties ######
+######################################
+profiling.process.performance.measurement.enabled=false
